fix(jukebox): allow empty slot entries